fix: (SearchBar) text alignment

--- a/src/components/search-bar/search-bar.less
+++ b/src/components/search-bar/search-bar.less
@@ -31,7 +31,7 @@
       }
       .adm-input {
         font-size: 13px;
-        line-height: 20px;
+        line-height: 19px;
       }
     }
   }
